--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>MaryBill Conglomerate Ltd. - Branch Products</title>
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
+		name='viewport' />
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="stylesheet" href="/css/ready.css">
 	<link rel="stylesheet" href="/css/demo.css">
 	<link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
+
+	<link rel="stylesheet" href="/iziToast-master/dist/css/iziToast.min.css">
 </head>
+
 <body>
 	<div class="wrapper">
 		<div class="main-header">
@@ -17,14 +23,15 @@
 				<a href="/admin/dashboard" class="logo">
 					MaryBill Conglomerate
 				</a>
-				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
+					data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<button class="topbar-toggler more"><i class="la la-ellipsis-v"></i></button>
 			</div>
 			<nav class="navbar navbar-header navbar-expand-lg">
 				<div class="container-fluid">
-					
+
 					<form class="navbar-left navbar-form nav-search mr-md-3" action="">
 						<div class="input-group">
 							<input type="text" placeholder="Search ..." class="form-control">
@@ -37,7 +44,8 @@
 					</form>
 					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="la la-envelope"></i>
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -48,7 +56,8 @@
 							</div>
 						</li>
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="la la-bell"></i>
 								<span class="notification">3</span>
 							</a>
@@ -59,12 +68,13 @@
 								<li>
 									<div class="notif-center">
 										<a href="#">
-											<div class="notif-icon notif-primary"> <i class="la la-user-plus"></i> </div>
+											<div class="notif-icon notif-primary"> <i class="la la-user-plus"></i>
+											</div>
 											<div class="notif-content">
 												<span class="block">
 													New user registered
 												</span>
-												<span class="time">5 minutes ago</span> 
+												<span class="time">5 minutes ago</span>
 											</div>
 										</a>
 										<a href="#">
@@ -73,18 +83,18 @@
 												<span class="block">
 													Rahmad commented on Admin
 												</span>
-												<span class="time">12 minutes ago</span> 
+												<span class="time">12 minutes ago</span>
 											</div>
 										</a>
 										<a href="#">
-											<div class="notif-img"> 
+											<div class="notif-img">
 												<img src="/img/profile2.jpg" alt="Img Profile">
 											</div>
 											<div class="notif-content">
 												<span class="block">
 													Reza send messages to you
 												</span>
-												<span class="time">12 minutes ago</span> 
+												<span class="time">12 minutes ago</span>
 											</div>
 										</a>
 										<a href="#">
@@ -93,201 +103,203 @@
 												<span class="block">
 													Farrah liked Admin
 												</span>
-												<span class="time">17 minutes ago</span> 
+												<span class="time">17 minutes ago</span>
 											</div>
 										</a>
 									</div>
 								</li>
 								<li>
-									<a class="see-all" href="javascript:void(0);"> <strong>See all notifications</strong> <i class="la la-angle-right"></i> </a>
+									<a class="see-all" href="javascript:void(0);"> <strong>See all
+											notifications</strong> <i class="la la-angle-right"></i> </a>
 								</li>
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span >Steven</span></span> </a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"
+								aria-expanded="false"> <img src="/img/profile-icon.png" alt="user-img" width="36"
+									class="img-circle"><span>Steven</span></span> </a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
 										<div class="u-img"><img src="/img/profile-icon.png" alt="user"></div>
 										<div class="u-text">
 											<h4>Steven</h4>
-											<p class="text-muted">hello@themekita.com</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+											<p class="text-muted">hello@themekita.com</p><a href="#"
+												class="btn btn-rounded btn-danger btn-sm">View Profile</a>
 										</div>
-									</li>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
-									<a class="dropdown-item" href="#"></i> My Balance</a>
-									<a class="dropdown-item" href="#"><i class="ti-email"></i> Inbox</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
-								</ul>
-								<!-- /.dropdown-user -->
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-			<div class="sidebar">
-				<div class="scrollbar-inner sidebar-wrapper">
-					<div class="user">
-						<div class="photo">
-							<img src="/img/profile-icon.png">
-						</div>
-						<div class="info">
-							<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
-								<span>
-									Steven
-									<span class="user-level">Administrator</span>
-									<span class="caret"></span>
-								</span>
-							</a>
-							<div class="clearfix"></div>
-
-							<div class="collapse in" id="collapseExample" aria-expanded="true">
-								<ul class="nav">
-									<li>
-										<a href="#profile">
-											<span class="link-collapse">My Profile</span>
-										</a>
-									</li>
-									<li>
-										<a href="#edit">
-											<span class="link-collapse">Edit Profile</span>
-										</a>
-									</li>
-									<li>
-										<a href="#settings">
-											<span class="link-collapse">Settings</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<ul class="nav">
-						<li class="nav-item">
-							<a href="/admin/dashboard">
-								<i class="la la-dashboard"></i>
-								<p>Dashboard</p>
-							</a>
+									</div>
+								</li>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
+								<a class="dropdown-item" href="#"></i> My Balance</a>
+								<a class="dropdown-item" href="#"><i class="ti-email"></i> Inbox</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+							</ul>
+							<!-- /.dropdown-user -->
 						</li>
-						<li class="nav-item">
-							<a href="/branch/<%= branch[0].branch_id %>">
-								<i class="la la-dashboard"></i>
-								<p>Branch Overview</p>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="/stock-branch/<%= branch[0].branch_id %>">
-								<i class="la la-table"></i>
-								<p>Stock Branch</p>
-							</a>
-						</li>
-						<li class="nav-item active">
-							<a href="#">
-								<i class="la la-keyboard-o"></i>
-								<p>Branch Products</p>
-								<span class="badge badge-count"><%= products.length %></span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="/branch/<%= branch[0].branch_id %>/sales">
-								<i class="la la-keyboard-o"></i>
-								<p>Sales</p>
-								<span class="badge badge-count"></span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="/logout">
-								<i class="la la-th"></i>
-								<p>Log Out</p>
-							</a>
-						</li>
-						
 					</ul>
 				</div>
-			</div>
-			<div class="main-panel">
-				<div class="content">
-					<div class="container-fluid">
-						<h4 class="page-title"><%= branch[0].branch_name %> > <span class="text-primary">Products</span></h4>
-						<div class="row justify-content-center">
-                            <div class="card">
-                                <div class="card-header">
-                                    <div class="card-title">Products Details</div>
-                                </div>
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered">
-                                            <thead>
-                                                <tr>
-                                                    <th>#</th>
-                                                    <th>Name</th>
-                                                    <th>Wholesale Price</th>
-                                                    <th>Retail Price</th>
-                                                    <th>Supplier</th>
-                                                    <th>Category</th>
-                                                    <th>Wholesale Quantity</th>
-                                                    <th>Retail Quantity</th>
-                                                    <th>Status</th>
-                                                    <th>Action</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <% products.forEach((product, index) => { %>
-                                                    <tr>
-                                                        <th scope="row"><%= index + 1 %></th>
-                                                        <td><%= product.product_name %></td>
-                                                        <td>₦<%= product.wholesale_price %></td>
-                                                        <td>₦<%= product.retail_price %></td>
-                                                        <td><%= product.name %></td>
-                                                        <td><%= product.category %></td>
-                                                        <td><%= product.stock_quantity_wholesale %></td>
-                                                        <td><%= product.stock_quantity_retail %></td>
-														<td><%= product.status %></td>
-                                                        <td><button class="btn-sm btn-primary" style="cursor: pointer;">Edit</button></td>
-                                                    </tr>
-                                                <% }) %>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>							
-						</div>
-						
+			</nav>
+		</div>
+		<div class="sidebar">
+			<div class="scrollbar-inner sidebar-wrapper">
+				<div class="user">
+					<div class="photo">
+						<img src="/img/profile-icon.png">
 					</div>
-				</div>
-				<!-- <footer class="footer">
-					<div class="container-fluid">
-						<nav class="pull-left">
+					<div class="info">
+						<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
+							<span>
+								Steven
+								<span class="user-level">Administrator</span>
+								<span class="caret"></span>
+							</span>
+						</a>
+						<div class="clearfix"></div>
+
+						<div class="collapse in" id="collapseExample" aria-expanded="true">
 							<ul class="nav">
-								<li class="nav-item">
-									<a class="nav-link" href="http://www.themekita.com">
-										ThemeKita
+								<li>
+									<a href="#profile">
+										<span class="link-collapse">My Profile</span>
 									</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">
-										Help
+								<li>
+									<a href="#edit">
+										<span class="link-collapse">Edit Profile</span>
 									</a>
 								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="https://themewagon.com/license/#free-item">
-										Licenses
+								<li>
+									<a href="#settings">
+										<span class="link-collapse">Settings</span>
 									</a>
 								</li>
 							</ul>
-						</nav>
-						<div class="copyright ml-auto">
-							2018, made with <i class="la la-heart heart text-danger"></i> by <a href="http://www.themekita.com">ThemeKita</a>
-						</div>				
+						</div>
 					</div>
-				</footer> -->
+				</div>
+				<ul class="nav">
+					<li class="nav-item">
+						<a href="/admin/dashboard">
+							<i class="la la-dashboard"></i>
+							<p>Dashboard</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/branch/<%= branch[0].branch_id %>">
+							<i class="la la-dashboard"></i>
+							<p>Branch Overview</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/stock-branch/<%= branch[0].branch_id %>">
+							<i class="la la-table"></i>
+							<p>Stock Branch</p>
+						</a>
+					</li>
+					<li class="nav-item active">
+						<a href="#">
+							<i class="la la-keyboard-o"></i>
+							<p>Branch Products</p>
+							<span class="badge badge-count">
+								<%= products.length %>
+							</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/branch/<%= branch[0].branch_id %>/sales">
+							<i class="la la-keyboard-o"></i>
+							<p>Sales</p>
+							<span class="badge badge-count"></span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/logout">
+							<i class="la la-th"></i>
+							<p>Log Out</p>
+						</a>
+					</li>
+
+				</ul>
+			</div>
+		</div>
+		<div class="main-panel">
+			<div class="content">
+				<div class="container-fluid">
+					<h4 class="page-title">
+						<%= branch[0].branch_name %> > <span class="text-primary">Products</span>
+					</h4>
+					<div class="row justify-content-center">
+						<div class="card">
+							<div class="card-header">
+								<div class="card-title">Products Details</div>
+							</div>
+							<div class="card-body">
+								<div class="table-responsive">
+									<table class="table table-bordered">
+										<thead>
+											<tr>
+												<th>#</th>
+												<th>Name</th>
+												<th>Wholesale Price</th>
+												<th>Retail Price</th>
+												<th>Supplier</th>
+												<th>Category</th>
+												<th>Wholesale Quantity</th>
+												<th>Retail Quantity</th>
+												<th>Status</th>
+												<th>Action</th>
+											</tr>
+										</thead>
+										<tbody>
+											<% products.forEach((product, index)=> { %>
+												<tr>
+													<th scope="row">
+														<%= index + 1 %>
+													</th>
+													<td>
+														<%= product.product_name %>
+													</td>
+													<td>₦<%= product.wholesale_price %>
+													</td>
+													<td>₦<%= product.retail_price %>
+													</td>
+													<td>
+														<%= product.name %>
+													</td>
+													<td>
+														<%= product.category %>
+													</td>
+													<td>
+														<%= product.stock_quantity_wholesale %>
+													</td>
+													<td>
+														<%= product.stock_quantity_retail %>
+													</td>
+													<td>
+														<%= product.status %>
+													</td>
+													<td><button class="btn-sm btn-primary"
+															style="cursor: pointer;">Edit</button></td>
+												</tr>
+												<% }) %>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
 			</div>
 		</div>
 	</div>
+	</div>
+
+	<%- include('./partials/responseMessage') %>
 </body>
 <script src="/js/core/jquery.3.2.1.min.js"></script>
 <script src="/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
@@ -296,6 +308,7 @@
 <script src="/js/plugin/chartist/chartist.min.js"></script>
 <script src="/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script>
 <!-- <script src="/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script> -->
+<script src="/iziToast-master/dist/js/iziToast.min.js"></script>
 <script src="/js/plugin/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 <script src="/js/plugin/jquery-mapael/jquery.mapael.min.js"></script>
 <script src="/js/plugin/jquery-mapael/maps/world_countries.min.js"></script>
@@ -303,4 +316,7 @@
 <script src="/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 <script src="/js/ready.min.js"></script>
 <script src="/js/demo.js"></script>
+
+<script src="/js/toast.js"></script>
+
 </html>
