--- a/views/upload-products.ejs
+++ b/views/upload-products.ejs
@@ -224,30 +224,43 @@
 										<div class="card-title">Fill in product details</div>
 									</div>
 									<div class="card-body">
+										<!-- Product name -->
 										<div class="form-group">
 											<label for="productName">Product Name</label>
 											<input type="text" class="form-control" id="productName" name="productName"
 												placeholder="Enter product name" required>
 										</div>
-
+										<!-- Wholesale cost price -->
 										<div class="form-group">
-											<label for="wholesalePrice">Wholesale Price</label>
-											<input type="number" class="form-control" id="wholesalePrice"
-												name="wholesalePrice" placeholder="0.00">
+											<label for="wholesaleCostPrice">Wholesale Cost Price</label>
+											<input type="number" class="form-control" id="wholesaleCostPrice"
+												name="wholesaleCostPrice" placeholder="0.00">
 										</div>
-
+										<!-- Wholesale selling price -->
 										<div class="form-group">
-											<label for="retailPrice">Retail Price</label>
-											<input type="number" class="form-control" id="retailPrice"
-												name="retailPrice" placeholder="0.00">
+											<label for="wholesaleSellingPrice">Wholesale Selling Price</label>
+											<input type="number" class="form-control" id="wholesaleSellingPrice"
+												name="wholesaleSellingPrice" placeholder="0.00">
 										</div>
-
+										<!-- Retail cost price -->
+										<div class="form-group">
+											<label for="retailCostPrice">Retail Cost Price</label>
+											<input type="number" class="form-control" id="retailCostPrice"
+												name="retailCostPrice" placeholder="0.00">
+										</div>
+										<!-- Retail selling price -->
+										<div class="form-group">
+											<label for="retailSellingPrice">Retail Selling Price</label>
+											<input type="number" class="form-control" id="retailSellingPrice"
+												name="retailSellingPrice" placeholder="0.00">
+										</div>
+										<!-- Product category -->
 										<div class="form-group">
 											<label for="category">Category</label>
 											<input type="text" class="form-control" id="category" name="category"
 												placeholder="Enter Category" required>
 										</div>
-
+										<!-- Product supplier -->
 										<div class="form-group">
 											<label for="supplier">Select Supplier</label>
 											<select class="form-control" id="supplier" name="supplierId" required>
