Modified the viewInvoice function

--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -189,7 +189,7 @@
                         </a>
                     </li>
                     <li class="nav-item active">
-                        <a href="#">
+                        <a href="/admin/product-upload">
                             <i class="la la-table"></i>
                             <p>Upload Products</p>
                         </a>
@@ -246,7 +246,7 @@
                                             <label for="wholesaleSellingPrice">Wholesale Selling Price</label>
                                             <input type="number" class="form-control" id="wholesaleSellingPrice"
                                                 name="wholesaleSellingPrice" placeholder="0.00"
-                                                value="<%= product.wholesale_cost_price %>" required>
+                                                value="<%= product.wholesale_selling_price %>" required>
                                         </div>
                                         <!-- Retail cost price -->
                                         <div class="form-group">
