--- a/views/upload-products.ejs
+++ b/views/upload-products.ejs
@@ -238,7 +238,7 @@
 										</div>
 										<!-- Wholesale selling price -->
 										<div class="form-group">
-											<label for="wholesaleSellingPrice">Wholesale Selling Price</label>
+											<label for="wholesaleSellingPrice">Wholesale Cost Price</label>
 											<input type="number" class="form-control" id="wholesaleSellingPrice"
 												name="wholesaleSellingPrice" placeholder="0.00">
 										</div>
