--- a/views/branch-overview.ejs
+++ b/views/branch-overview.ejs
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+	<span class="d-none" id="branchId">
+		<%= branch[0].branch_id %>
+	</span>
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
@@ -44,8 +47,8 @@
 					</form>
 					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">
 								<i class="la la-envelope"></i>
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,8 +59,8 @@
 							</div>
 						</li>
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">
 								<i class="la la-bell"></i>
 								<span class="notification">3</span>
 							</a>
@@ -115,9 +118,9 @@
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"
-								aria-expanded="false"> <img src="/img/profile-icon.png" alt="user-img" width="36"
-									class="img-circle"><span>Steven</span></span> </a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img
+									src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span>Steven</span></span>
+							</a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
@@ -232,7 +235,100 @@
 						<%= branch[0].branch_name %> > <span class="text-primary">Overview</span>
 					</h4>
 					<div class="row justify-content-center">
+						<!-- Sale & Revenue Start -->
+						<div class="container-fluid pt-4 px-4">
+							<h5 class="mb-4">Sales Analysis</h5>
 
+							<div class="row g-4">
+								<div class="col-sm-6 col-xl-6">
+									<div class="bg-primary rounded d-flex align-items-center justify-content-between p-4">
+										<i class="fa fa-chart-line fa-3x text-primary"></i>
+										<div class="ms-3">
+											<p class="mb-2 text-white">Total <span class="text-white">Retail</span> Sales Today</p>
+											<h6 class="mb-0 text-white">₦ <span id="retailAmountToday">0,00</span></h6>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6 col-xl-6">
+									<div class="bg-primary rounded d-flex align-items-center justify-content-between p-4">
+										<i class="fa fa-chart-line fa-3x text-primary"></i>
+										<div class="ms-3">
+											<p class="mb-2 text-white">Total <span class="text-white">Wholesale</span> Sales Today</p>
+											<h6 class="mb-0 text-white">₦ <span id="wholesaleAmountToday">0,00</span></h6>
+										</div>
+									</div>
+								</div>
+
+								<hr>
+
+							</div>
+						</div>
+
+						<br><br>
+						<!-- Date Range Revenue -->
+						<div class="mt-5">
+							<h6 class="mb-4">Select Date Range for Sales Analysis</h6>
+							<div class="date-range-container bg-primary d-flex mt-3">
+								<div>
+									<label class="text-white" for="dateRange">Select Date Range:</label>
+									<select id="dateRange">
+										<option value="">-- Select Range --</option>
+										<option value="yesterday">Yesterday</option>
+										<option value="last7">Last 7 Days</option>
+										<option value="last30">Last 30 Days</option>
+										<option value="thisMonth">This Month</option>
+										<option value="lastMonth">Last Month</option>
+										<option value="thisYear">This Year</option>
+										<option value="lastYear">Last Year</option>
+										<option value="custom">Custom Range</option>
+									</select>
+								</div>
+
+								<!-- Custom date pickers -->
+								<div>
+									<label for="customRange" class="cdr text-white">Custom Date Range:</label>
+									<div class="custom-range" id="customRange">
+										<input type="date" id="customStart">
+										<input type="date" id="customEnd">
+									</div>
+								</div>
+
+								<div>
+									<label class="text-white" for="dateInput">Date Range:</label>
+									<input type="text" id="dateInput" placeholder="YYYY-MM-DD - YYYY-MM-DD" readonly />
+								</div>
+							</div>
+						</div>
+
+
+						<br><br><br>
+
+						<!-- Analysis gotten from daterange -->
+						<div class="container-fluid pt-4 px-4">
+							<div class="row g-4 d-none" id="dateRangeAnalysis">
+								<div class="col-sm-6 col-xl-6">
+									<div class="bg-primary rounded d-flex align-items-center justify-content-between p-4">
+										<i class="fa fa-chart-line fa-3x text-primary"></i>
+										<div class="ms-3">
+											<p class="mb-2 text-white">Total Retail Sales</p>
+											<h6 class="mb-0 text-white">₦ <span id="retailAmountFromRange">0,00</span></h6>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6 col-xl-6">
+									<div class="bg-primary rounded d-flex align-items-center justify-content-between p-4">
+										<i class="fa fa-chart-line fa-3x text-primary"></i>
+										<div class="ms-3">
+											<p class="mb-2 text-white">Total Wholesale Sales</p>
+											<h6 class="mb-0 text-white">₦ <span id="wholesaleAmountFromRange">0,00</span></h6>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- End of Analysis -->
+
+						<!-- stopped -->
 					</div>
 
 				</div>
@@ -259,6 +355,8 @@
 <script src="/js/ready.min.js"></script>
 <script src="/js/demo.js"></script>
 
-<script src="/js/toast.js"></script>
+<script src="/js/analysis.js"></script>
+<script src="/js/daterange.js"></script>
+<!-- <script src="/js/toast.js"></script> -->
 
 </html>
